--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>IPVO Acampa MovTeens</title>
+    <title>IPVO Acampa Teens</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://unpkg.com/primeicons/primeicons.css" rel="stylesheet" />
